--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
       <artifactId>spring-security-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.4.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version> <!-- Utiliza la versión más reciente -->
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
