--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,25 @@
+# Configuración del servidor
 server.port = 8443
 server.ssl.key-store = classpath:keystore.jks
 server.ssl.key-store-password = password
 server.ssl.key-password = secret
 
+# Configuración de Mustache
+spring.mustache.suffix = .html
 
-spring.mustache.suffix=.html
-logging.level.org.springframework.web=DEBUG
+# Configuración de logging
+logging.level.org.springframework.web = DEBUG
 
-#Para la base de datos
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Configuración de la base de datos
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/ticketeventaplicacion?serverTimezone=Europe/Madrid
+spring.datasource.username = root
+spring.datasource.password = papr0bar
+spring.sql.init.mode = never
 
+# Configuración de JPA
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql = true
 
-# indicamos donde esta la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/ticketeventaplicacion?serverTimezone=Europe/Madrid
-
-#usuario de acceso
-spring.datasource.username=root
-spring.datasource.password=papr0bar
-
-#muestra las instrucciones de la base de datos
-spring.jpa.show-sql=true
-
-#Debugear los errores
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#crea tablas
-spring.jpa.hibernate.ddl-auto=create
-
+# Configuración de Hibernate para no recrear las tablas en cada inicio
+spring.jpa.hibernate.ddl-auto = update
