--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -13,6 +15,24 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <version>0.0.1-SNAPSHOT</version>
   <name>TicketEvent</name>
   <description>TicketEvent</description>
+
+  <repositories>
+    <!-- Repositorio de Maven Central -->
+    <repository>
+      <id>central</id>
+      <name>Maven Central Repository</name>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </repository>
+    <!-- Repositorio de Spring Milestones -->
+    <repository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones Repository</name>
+      <url>https://repo.spring.io/milestone</url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <properties>
     <java.version>21</java.version>
@@ -40,12 +60,12 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
-    <!--<dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>4.0.1</version> Utiliza la versión más reciente
-      <scope>provided</scope>
-    </dependency>-->
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>2.0.24</version> <!-- O la versión más reciente disponible -->
+    </dependency>
+
   </dependencies>
 
   <build>
