Cambiamos pom para la documentacion

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,9 @@
   </repositories>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>21</java.version>
+    <start-class>codeUrjc.daw.TicketEventApplication</start-class>
   </properties>
   <dependencies>
     <dependency>
@@ -156,24 +158,6 @@
               <configOptions>
                 <hideGenerationTimestamp>true</hideGenerationTimestamp>
               </configOptions>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.coderplus.maven.plugins</groupId>
-        <artifactId>copy-rename-maven-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <id>copy-file</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>rename</goal>
-            </goals>
-            <configuration>
-              <sourceFile>api-docs/index.html</sourceFile>
-              <destinationFile>api-docs/api-docs.html</destinationFile>
             </configuration>
           </execution>
         </executions>
