--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.2</version>
+    <version>3.2.1</version>
     <relativePath/>
   </parent>
   <groupId>com.codeUrjc.daw</groupId>
@@ -16,28 +16,9 @@
   <name>TicketEvent</name>
   <description>TicketEvent</description>
 
-  <repositories>
-    <!-- Repositorio de Maven Central -->
-    <repository>
-      <id>central</id>
-      <name>Maven Central Repository</name>
-      <url>https://repo.maven.apache.org/maven2</url>
-    </repository>
-    <!-- Repositorio de Spring Milestones -->
-    <repository>
-      <id>spring-milestones</id>
-      <name>Spring Milestones Repository</name>
-      <url>https://repo.spring.io/milestone</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>21</java.version>
-    <start-class>codeUrjc.daw.TicketEventApplication</start-class>
+    <java.version>17</java.version>
   </properties>
   <dependencies>
     <dependency>
@@ -87,18 +68,20 @@
       <artifactId>spring-boot-devtools</artifactId>
     </dependency>
     <dependency>
-
       <groupId>org.springdoc</groupId>
-
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-
       <version>2.3.0</version>
-
     </dependency>
 
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
@@ -164,4 +147,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
