--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql = true
 
 # Configuración de Hibernate para no recrear las tablas en cada inicio
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.main.allow-bean-definition-overriding=true
 jwt.secret=mi_secreto
