primera config de docker

--- a/api-docs/api-docs.yaml
+++ b/api-docs/api-docs.yaml
@@ -20,16 +20,16 @@ paths:
           type: integer
           format: int64
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: User not found
         "200":
           description: Found the user
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        "404":
+          description: User not found
+        "400":
+          description: Invalid id supplied
     put:
       tags:
       - user-rest-controller
@@ -49,16 +49,16 @@ paths:
               $ref: '#/components/schemas/User'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: User not found
         "200":
           description: User updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        "404":
+          description: User not found
+        "400":
+          description: Invalid id supplied
     delete:
       tags:
       - user-rest-controller
@@ -72,16 +72,16 @@ paths:
           type: integer
           format: int64
       responses:
-        "404":
-          description: User not deleted
-        "400":
-          description: Invalid id supplied
         "200":
           description: User deleted
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+        "404":
+          description: User not deleted
+        "400":
+          description: Invalid id supplied
   /api/tickets/{id}:
     get:
       tags:
@@ -96,6 +96,8 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: Ticket not found
         "200":
           description: Found the ticket
           content:
@@ -104,8 +106,6 @@ paths:
                 $ref: '#/components/schemas/Ticket'
         "400":
           description: Invalid id supplied
-        "404":
-          description: Ticket not found
     put:
       tags:
       - ticket-rest-controller
@@ -125,16 +125,16 @@ paths:
               $ref: '#/components/schemas/Ticket'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Ticket not update
         "200":
           description: Ticket updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Ticket'
+        "404":
+          description: Ticket not update
+        "400":
+          description: Invalid id supplied
     delete:
       tags:
       - ticket-rest-controller
@@ -148,16 +148,16 @@ paths:
           type: integer
           format: int64
       responses:
-        "400":
-          description: Invalid id supplied
+        "404":
+          description: Ticket not deleted
         "200":
           description: Ticket deleted
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Ticket'
-        "404":
-          description: Ticket not deleted
+        "400":
+          description: Invalid id supplied
   /api/events/{id}:
     get:
       tags:
@@ -172,10 +172,10 @@ paths:
           type: integer
           format: int64
       responses:
-        "400":
-          description: Invalid id supplied
         "404":
           description: Event not found
+        "400":
+          description: Invalid id supplied
         "200":
           description: Found the event
           content:
@@ -201,16 +201,16 @@ paths:
               $ref: '#/components/schemas/Event'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Event not update
         "200":
           description: Event updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
+        "404":
+          description: Event not update
+        "400":
+          description: Invalid id supplied
     delete:
       tags:
       - event-rest-controller
@@ -224,6 +224,8 @@ paths:
           type: integer
           format: int64
       responses:
+        "404":
+          description: Event not deleted
         "200":
           description: Event deleted
           content:
@@ -232,8 +234,6 @@ paths:
                 $ref: '#/components/schemas/Event'
         "400":
           description: Invalid id supplied
-        "404":
-          description: Event not deleted
   /api/events/{id}/image:
     get:
       tags:
@@ -282,16 +282,16 @@ paths:
                   type: string
                   format: binary
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Event image not created
         "200":
           description: Event image updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
+        "404":
+          description: Event image not created
+        "400":
+          description: Invalid id supplied
     post:
       tags:
       - event-rest-controller
@@ -316,16 +316,16 @@ paths:
                   type: string
                   format: binary
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Event image not created
         "200":
           description: Event image created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
+        "404":
+          description: Event image not created
+        "400":
+          description: Invalid id supplied
     delete:
       tags:
       - event-rest-controller
@@ -339,10 +339,10 @@ paths:
           type: integer
           format: int64
       responses:
-        "400":
-          description: Invalid id supplied
         "404":
           description: Event not deleted
+        "400":
+          description: Invalid id supplied
         "200":
           description: Event image deleted
           content:
@@ -363,8 +363,6 @@ paths:
           type: integer
           format: int64
       responses:
-        "400":
-          description: Invalid id supplied
         "200":
           description: Found the comment
           content:
@@ -373,6 +371,8 @@ paths:
                 $ref: '#/components/schemas/Comment'
         "404":
           description: Comment not found
+        "400":
+          description: Invalid id supplied
     put:
       tags:
       - comment-rest-controller
@@ -392,16 +392,16 @@ paths:
               $ref: '#/components/schemas/Comment'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Comment not update
         "200":
           description: Comment updated
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
+        "404":
+          description: Comment not update
+        "400":
+          description: Invalid id supplied
     delete:
       tags:
       - comment-rest-controller
@@ -415,14 +415,14 @@ paths:
           type: integer
           format: int64
       responses:
-        "404":
-          description: Comment not deleted
         "200":
           description: Comment deleted
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Comment'
+        "404":
+          description: Comment not deleted
         "400":
           description: Invalid id supplied
   /api/users/:
@@ -430,10 +430,8 @@ paths:
       tags:
       - user-rest-controller
       summary: Get all users
-      operationId: getComments
+      operationId: getUsers
       responses:
-        "400":
-          description: Invalid id supplied
         "200":
           description: Found the users
           content:
@@ -442,6 +440,8 @@ paths:
                 $ref: '#/components/schemas/User'
         "404":
           description: User not found
+        "400":
+          description: Invalid id supplied
     post:
       tags:
       - user-rest-controller
@@ -454,8 +454,6 @@ paths:
               $ref: '#/components/schemas/User'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
         "200":
           description: User created
           content:
@@ -464,6 +462,8 @@ paths:
                 $ref: '#/components/schemas/User'
         "404":
           description: User not found
+        "400":
+          description: Invalid id supplied
   /api/tickets:
     get:
       tags:
@@ -471,10 +471,10 @@ paths:
       summary: Get all tickets
       operationId: getTickets
       responses:
-        "400":
-          description: Invalid id supplied
         "404":
           description: Tickets not found
+        "400":
+          description: Invalid id supplied
         "200":
           description: Found the tickets
           content:
@@ -493,8 +493,6 @@ paths:
               $ref: '#/components/schemas/Ticket'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
         "201":
           description: Ticket created
           content:
@@ -503,6 +501,8 @@ paths:
                 $ref: '#/components/schemas/Ticket'
         "404":
           description: Ticket not created
+        "400":
+          description: Invalid id supplied
   /api/events/:
     get:
       tags:
@@ -510,16 +510,16 @@ paths:
       summary: Get all events
       operationId: getEvents
       responses:
-        "404":
-          description: Events not found
-        "400":
-          description: Invalid id supplied
         "200":
           description: Found the events
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
+        "404":
+          description: Events not found
+        "400":
+          description: Invalid id supplied
     post:
       tags:
       - event-rest-controller
@@ -532,25 +532,23 @@ paths:
               $ref: '#/components/schemas/Event'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: Event not created
         "201":
           description: Event created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
+        "404":
+          description: Event not created
+        "400":
+          description: Invalid id supplied
   /api/comments/:
     get:
       tags:
       - comment-rest-controller
       summary: Get all comments
-      operationId: getComments_1
+      operationId: getComments
       responses:
-        "400":
-          description: Invalid id supplied
         "200":
           description: Found the comments
           content:
@@ -559,6 +557,8 @@ paths:
                 $ref: '#/components/schemas/Comment'
         "404":
           description: Comments not found
+        "400":
+          description: Invalid id supplied
     post:
       tags:
       - comment-rest-controller
@@ -571,8 +571,6 @@ paths:
               $ref: '#/components/schemas/Comment'
         required: true
       responses:
-        "400":
-          description: Invalid id supplied
         "201":
           description: Comment created
           content:
@@ -581,6 +579,8 @@ paths:
                 $ref: '#/components/schemas/Comment'
         "404":
           description: Comment not created
+        "400":
+          description: Invalid id supplied
   /api/auth/refresh:
     post:
       tags:
@@ -594,16 +594,16 @@ paths:
         schema:
           type: string
       responses:
-        "400":
-          description: Invalid id supplied
-        "404":
-          description: token not refresh
         "200":
           description: token refresh
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
+        "404":
+          description: token not refresh
+        "400":
+          description: Invalid id supplied
   /api/auth/logout:
     post:
       tags:
@@ -611,16 +611,16 @@ paths:
       summary: Post logout
       operationId: logOut
       responses:
-        "400":
-          description: Invalid id supplied
+        "404":
+          description: logout not do
         "200":
           description: logout success
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
-        "404":
-          description: logout not do
+        "400":
+          description: Invalid id supplied
   /api/auth/login:
     post:
       tags:
@@ -645,16 +645,16 @@ paths:
               $ref: '#/components/schemas/LoginRequest'
         required: true
       responses:
+        "400":
+          description: Invalid ids supplied
+        "404":
+          description: login not created
         "200":
           description: login created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Event'
-        "400":
-          description: Invalid ids supplied
-        "404":
-          description: login not created
   /load-more-events:
     get:
       tags:
