--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,15 @@ spring.mustache.suffix = .html
 logging.level.org.springframework.web = DEBUG
 
 # Configuración de la base de datos
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/ticketeventaplicacion?serverTimezone=Europe/Madrid
+#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost/ticketeventaplicacion?serverTimezone=Europe/Madrid
 spring.datasource.username = root
 spring.datasource.password = papr0bar
+
+
+
+
+
 spring.sql.init.mode = never
 
 # Configuración de JPA
